--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
               <p><a href="week2.html">Week 2</a></p>
               <p><a href="week3.html">Week 3</a></p>
               <p><a href="week4.html">Week 4</a></p>
+              <p><a href="week5.html">Week 5</a></p>
               <p><a href="week6.html">Week 6</a></p>
             </section>
             
